istio-system/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: auth-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - sample-dev.catch-me-app.com
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true

    - hosts:
        - sample-dev.catch-me-app.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: auth-tls   # ✅ istio-system 네임스페이스의 Secret 이름
